--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,4 +1,5 @@
-@import url("./variables.scss");
+@import "./properties";
+
 
 body {
     background-color: $background-white;
@@ -9,3 +10,31 @@ body {
     min-width: fit-content;
 
 }
+
+main {
+    background-color: $background-grey;
+    margin-top: 60px;
+
+    .container {
+        display: flex;
+        justify-content: left;
+        margin: 0 auto;
+        max-width: 1000px;
+    }
+}
+
+a {
+    text-decoration: none;
+    color: $link-color;
+    font-size: 0.9em;
+    font-weight: 500;
+}
+
+@media only screen and (max-width:1024px){
+    main .container{
+        justify-content: center !important;
+    }
+}
+
+
+
