--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -8,6 +8,7 @@ body {
     margin: 0;
     padding: 0;
     min-width: fit-content;
+    font-family: 'Noto Sans', sans-serif;
 
 }
 
@@ -17,8 +18,8 @@ main {
 
     .container {
         display: flex;
-        justify-content: left;
-        margin: 0 auto;
+        justify-content: center;
+        margin: 0 0;
         max-width: 1000px;
     }
 }
