--- a/src/styles/_properties.scss
+++ b/src/styles/_properties.scss
@@ -1,11 +1,13 @@
 $background-white: #fff;
 $background-grey: #fafafa;
+$background-grey-dark:#EFEFEF;
 $gradient-one:#da3394;
 $gradient-two:#e03c67;
 $gradient-three: #f3753b;
 $gradient-four:#f99b4a;
 $font-color-primary:#262626;
 $font-color-secondary:#8e8e8e;
+$font-solor-secondary-dark:#262626;
 $font-color-footer:#c7c7c7;
 $border-color-grey:#dbdbdb;
 $border-color-secondary:#efefef;
