--- a/src/styles/cards.scss
+++ b/src/styles/cards.scss
@@ -1,6 +1,14 @@
 .cards {
-    width: 600px;
+    width: 500px;
+    margin-left: 150px;
 }
+
+@media only screen and (max-width:1024px){
+    .cards {
+        margin-left: 0;
+    }
+}
+
 
 @media only screen and (max-width:600px){
     .cards{
