--- a/src/styles/navigation.scss
+++ b/src/styles/navigation.scss
@@ -6,7 +6,7 @@
     z-index: 2;
     background-color: $background-white;
     width: 100%;
-    border-bottom: 1px solid $background-grey;
+    border-bottom: 2px solid $background-grey-dark;
 }
 
 .container {
@@ -19,8 +19,8 @@
 
     .logo {
         padding: 0 1em;
-        width: 100px;
-        height: 35px;
+        width: 130px;
+        height: 50px;
 
         &:hover {
             cursor: pointer;
@@ -29,25 +29,28 @@
     }
 
     .search {
-        border: 1px solid $border-color-grey;
-        border-radius: 3px;
-        background-color: $background-grey;
+        //border: 1px solid $border-color-grey;
+        border-radius: 10px;
+        background-color: $background-grey-dark;
         min-width: 225px;
+        height: 40px;
+        margin-top: 8px;
+        padding-inline: 20px;
         display: flex;
         align-items: center;
-        justify-content: center;
+        justify-content: left;
 
         .searchIcon {
-            width: 10px;
+            width: 15px;
             opacity: 0.4;
             margin-right: 0.3rem;
             
         }
 
-        .searchText {
-            color: $font-color-primary;
-            font-size: 0.85rem;
-            font-weight: 300;
+        input {
+            outline: 0;
+            border: none;
+            background: none;
         }
     }
 }
