--- a/src/styles/profile.scss
+++ b/src/styles/profile.scss
@@ -10,7 +10,7 @@
         display: flex;
         flex-direction: column;
         margin-left: 1em;
-        max-width: 180px;
+        min-width: 180px;
 
         .accountName {
             font-weight: 500;
@@ -28,10 +28,9 @@
                 font-size: 0.8em;
             }
         }
-
-        a {
-            text-align: left;
-            width: 100%;
-        }
+    }
+    a {
+        text-align: right;
+        width: 100%;
     }
 }
